# boolmesh

./: .gitignore  Cargo.toml  README.md
examples/: bvh_test.rs  extrusion.rs  hmesh_viewer.rs  ker02_viewer.rs  kernel_check.rs  main.rs  menger_sponge.rs  multiple_models.rs  primitives_demo.rs  projection.rs  revolution.rs  slicing.rs
examples/utils/: mod.rs
src/: cleanup.rs  common.rs  lib.rs  structs.rs  tests.rs
src/boolean/: boolean46.rs  ear_clip.rs  intersect.rs  kernel02.rs  kernel11.rs  kernel12.rs  mod.rs  polygon.rs  quetry_2d_tree.rs  shadow.rs  test_data.rs  tests.rs  triangulate.rs
src/boolean03/: kernel01.rs  kernel02.rs  kernel03.rs  kernel11.rs  kernel12.rs  mod.rs  op01.rs  op03.rs  op12.rs
src/boolean45/: mod.rs
src/compose/: cone.rs  cube.rs  cylinder.rs  extrusion.rs  mod.rs  sphere.rs  torus.rs
src/hmesh/: mod.rs  tests.rs
src/intersection/: boolean46.rs  intersect.rs  kernel02.rs  kernel11.rs  kernel12.rs  mod.rs  shadow.rs  test_data.rs  tests.rs
src/manifold/: bounds.rs  collider.rs  coplanar.rs  hmesh.rs  mod.rs  planar.rs  sanitize.rs
src/sanitization/: mod.rs
src/simplification/: collapse.rs  dedup.rs  edge_collapse.rs  edge_dedup.rs  edge_swap.rs  mod.rs  re_swap.rs  test.rs  vert_split.rs
src/triangulation/: common.rs  ear_clip.rs  edge_op.rs  flat_tree.rs  halfedge.rs  mod.rs  polygon.rs  quetry_2d_tree.rs  test.rs  tri_halfs.rs
