[package]
name = "boolean"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
nalgebra = "0.33.2"
rayon = "1.11.0"

tobj = {version = "4.0.3"}
bevy = { version = "0.16.1", optional = true }
bevy_obj = { version = "0.16.1", optional = true }
bevy_panorbit_camera = { version = "0.26.0", optional = true }


[features]
default = []
bevy = [
    "dep:bevy",
    "dep:bevy_obj",
    "dep:bevy_obj",
    "dep:bevy_panorbit_camera",
]

[[example]]
name = "menger_sponge"
path = "examples/menger_sponge.rs"
required-features = ["bevy"]

[[example]]
name = "multiple_models"
path = "examples/multiple_models.rs"
required-features = ["bevy"]
