[package]
name = "boolmesh"
version = "0.1.2"
edition = "2024"
description = "Robust 3D mesh boolean library"
license = "MPL-2.0"
readme = "README.md"
authors = ["Saki Komikado <komietty@gmail.com>"]
keywords = ["geometry", "physics"]
categories = ["game-development", "graphics", "mathematics", "simulation"]
exclude = ["/examples", ".gitignore"]

[dependencies]
anyhow = "1.0.100"
nalgebra = "0.34.1"
rayon = "1.11.0"
glam = "0.30.9"

tobj = {version = "4.0.3", optional = true}
bevy = { version = "0.16.1", optional = true }
bevy_obj = { version = "0.16.1", optional = true }
bevy_panorbit_camera = { version = "0.26.0", optional = true }


[features]
default = []
f32 = []
bevy = [
    "dep:tobj",
    "dep:bevy",
    "dep:bevy_obj",
    "dep:bevy_panorbit_camera",
]

[[example]]
name = "menger_sponge"
path = "examples/menger_sponge.rs"
required-features = ["bevy"]

[[example]]
name = "multiple_models"
path = "examples/multiple_models.rs"
required-features = ["bevy"]
